# dimension

./: Cargo.toml  ideas.txt  todo.txt
assets/Tilemaps/: DayLevel.tmj  DayLevel.tmx  TestLevel02.tmj  TestLevel02.tmx  TestLevel02_Nite.tmj  TestLevel02_Nite.tmx  TestMap.tmj  TestMap.tmx
assets/Tilesets/: DayTileset.tsj  DayTileset.tsx  NightTileset.tsj  NightTileset.tsx  TestTileset.tsj  TestTileset.tsx  Tileset.tsj  Tileset.tsx
src/: consts.rs  game.rs  main.rs  object.rs
src/common/: anim_macros.rs  dir_h.rs  ivec2.rs  mod.rs  update_data.rs  void.rs
src/data/: item.rs  mod.rs  scene_state.rs  transition_state.rs
src/entities/: door.rs  entities.rs  entity.rs  gate.rs  goal.rs  item.rs  mod.rs  player.rs  player_spawner.rs  sign.rs
src/entities/player/: anim.rs  consts.rs  mod.rs  player.rs  state.rs  state_dash.rs  state_jump.rs  state_normal.rs  state_wallslide.rs  update_data.rs
src/global/: mod.rs  player_state.rs
src/graphics/: buffer.rs  image.rs  mod.rs  textures.rs  window.rs
src/io/: controller.rs
src/level/: level.rs  level_info.rs  mod.rs  room.rs  tile.rs  tilemap_info.rs  tileset_info.rs
src/systems/: collision.rs  mod.rs
src/ui/: hud.rs  mod.rs  text.rs  win_dlg.rs
